[package]
name = "cron-with-randomness"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
cron = "0.12"
lazy_static = "1.5"
rand = "0.8"
rand_chacha = "0.3.1"
regex = "1.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
simple_accumulator = "0.7.0"
tracing-test = "0.2.5"
